updated meeting time

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <li>Empower: give students the resources and opportunities to get involved, voice their interests, and have an impact.</li>
         </ul></div>
         <div class="blackboxed">
-          We meet every Tuesday from 8pm-9pm in THH 114 <br>
+          We meet every Tuesday from 8pm-9pm in TCC 450 <br>
           Click <a target="_blank" href="images/map-of-sustainability.png">here</a> to see how we fit into USC’s environmental community!
         </div>
       </div>
@@ -457,33 +457,7 @@
                     <strong>Spirit Vegetable:</strong> Scallion
                   </figcaption>
                 </figure>
-              </a>
-              <!-- <a>
-                <figure id="Joseph">
-                  <img src="images/esa-logo.png" alt="">
-                  <h2>
-                    Joseph Mathews
-                  </h2>
-                  <em>
-                    Director of Events
-                  </em>
-                  <figcaption>
-                    <strong>Year:</strong>
-                  </figcaption>
-                  <figcaption>
-                    <strong>Major:</strong>
-                  </figcaption>
-                  <figcaption>
-                   <strong>Hometown:</strong>
-                  </figcaption>
-                  <figcaption>
-                    <strong>Fun Fact:</strong>
-                  </figcaption>
-                  <figcaption>
-                    <strong>Spirit Vegetable:</strong>
-                  </figcaption>
-                </figure>
-              </a> -->
+              </a>              
               <a>
                 <figure id="Madi">
                   <img src="images/madi_david.jpg" alt="">
@@ -712,7 +686,7 @@
     <div id="membership" class="subcontent">
         <h1>Membership</h1>
         <div class="innercontent">
-          We meet every Tuesday from 8pm-9pm in THH 114!
+          We meet every Tuesday from 8pm-9pm in TCC 450!
       </div>
     </div>
 
@@ -803,12 +777,12 @@
           <h1>Member Organizations</h1>
           <div>
             <a target="_blank" href="http://www.facebook.com/groups/clovrer/">
-              <figure>
-                <img src="images/memberorgs/clover.png" alt="">
-                <figcaption>
-                  Clover
-                </figcaption>
-              </figure>
+            <figure>
+              <img src="images/memberorgs/clover.jpg" alt="">
+              <figcaption>
+                Clover
+              </figcaption>
+            </figure>
             </a>
             <a target="_blank" href="http://www.facebook.com/aaeesUSC/">
               <figure>
@@ -882,12 +856,7 @@
                 </figcaption>
               </figure>
              </a>
-             <figure>
-                <img src="images/clear-image.png" alt="">
-                <figcaption>
-                </figcaption>
-              </figure>
-            </a>
+
             <!-- ADD NEW MEMBER ORGS HERE
                   - NOTE: when adding one, delete an empty one below -->
               <!-- If a member or is deleted add these coming soon lines to the bottom
