updated member orgs

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                     <strong>Spirit Vegetable:</strong> Scallion
                   </figcaption>
                 </figure>
-              </a>              
+              </a>
               <a>
                 <figure id="Madi">
                   <img src="images/madi_david.jpg" alt="">
@@ -776,6 +776,14 @@
         <div id="members" class="subcontent grid">
           <h1>Member Organizations</h1>
           <div>
+              <a target="_blank" href="http://www.facebook.com/aaeesUSC/">
+                <figure>
+                  <img src="images/memberorgs/aaes.jpg" alt="">
+                  <figcaption>
+                    American Academy of of Environmental Engineers & Scientists
+                  </figcaption>
+                </figure>
+              </a>
             <a target="_blank" href="http://www.facebook.com/groups/clovrer/">
             <figure>
               <img src="images/memberorgs/clover.jpg" alt="">
@@ -783,14 +791,6 @@
                 Clover
               </figcaption>
             </figure>
-            </a>
-            <a target="_blank" href="http://www.facebook.com/aaeesUSC/">
-              <figure>
-                <img src="images/memberorgs/aaes.jpg" alt="">
-                <figcaption>
-                  American Academy of of Environmental Engineers & Scientists
-                </figcaption>
-              </figure>
             </a>
             <a target="_blank" href="http://www.facebook.com/ecoop1460">
               <figure>
@@ -824,11 +824,11 @@
                 </figcaption>
               </figure>
             </a>
-            <a target="_blank" href="http://scubadiveclub.weebly.com/">
+            <a target="_blank" href="https://www.facebook.com/scunderwater/">
               <figure>
                 <img src="images/memberorgs/uscdive.jpg" alt="">
                 <figcaption>
-                 SCuba Diving Club
+                 SC Underwater
                 </figcaption>
               </figure>
             </a>
@@ -856,6 +856,46 @@
                 </figcaption>
               </figure>
              </a>
+             <a target="_blank" href="http://scf.usc.edu/~nschorn/itp104/USC_Club_EcoBright/EcoBright.html">
+               <figure>
+                 <img src="images/memberorgs/EcoBright.png" alt="">
+                 <figcaption>
+                   EcoBright
+                 </figcaption>
+               </figure>
+              </a>
+              <a target="_blank" href="https://bloomboutiquela.com/">
+                <figure>
+                  <img src="images/memberorgs/Bloom.jpg" alt="">
+                  <figcaption>
+                    Bloom Boutique
+                  </figcaption>
+                </figure>
+               </a>
+               <a target="_blank" href="http://uscasce.com/">
+                 <figure>
+                   <img src="images/memberorgs/asce.png" alt="">
+                   <figcaption>
+                     American Society of Civil Engineers
+                   </figcaption>
+                 </figure>
+                </a>
+                <a target="_blank" href="https://twitter.com/treesbytrojans?lang=en">
+                  <figure>
+                    <img src="images/memberorgs/trees.jpg" alt="">
+                    <figcaption>
+                      Trees by Trojans
+                    </figcaption>
+                  </figure>
+                 </a>
+                 <a target="_blank" href="https://citizensclimatelobby.org/chapters/CA_University_of_Southern_California/">
+                   <figure>
+                     <img src="images/memberorgs/ccl.png" alt="">
+                     <figcaption>
+                       Citizen's Climate Lobby
+                     </figcaption>
+                   </figure>
+                  </a>
 
             <!-- ADD NEW MEMBER ORGS HERE
                   - NOTE: when adding one, delete an empty one below -->
