--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
               </a>
               <a target="_blank" href="https://bloomboutiquela.com/">
                 <figure>
-                  <img src="images/memberorgs/Bloom.jpg" alt="">
+                  <img src="images/memberorgs/bloom.jpg" alt="">
                   <figcaption>
                     Bloom Boutique
                   </figcaption>
