updated member orgs

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 </figcaption>
               </figure>
             </a>
-            <a target="_blank" href="https://www.facebook.com/scunderwater/">
+            <a target="_blank" href="https://www.scunderwater.com/">
               <figure>
                 <img src="images/memberorgs/uscdive.jpg" alt="">
                 <figcaption>
@@ -641,6 +641,14 @@
                      </figcaption>
                    </figure>
                   </a>
+                  <a target="_blank" href="https://www.facebook.com/groups/2533476590046796/?ref=share">
+                    <figure>
+                      <img src="images/memberorgs/surfrider.png" alt="">
+                      <figcaption>
+                        SC Surfrider
+                      </figcaption>
+                    </figure>
+                   </a>
 
             <!-- ADD NEW MEMBER ORGS HERE
                   - NOTE: when adding one, delete an empty one below -->
