added divestment initiative

--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
             <li>Develop degree programs that train students to be practitioners of sustainability studies and science with a curriculum that embodies breadth and depth</li>
             <li>Develop excellence in research that includes cross-disciplinary studies, promotes competitiveness in grant applications, and produces transformative findings</li>
           </ul></div>
+          Divestment/Reinvestment<br/>
+          <div class="whiteboxed left"><ul>
+            <!-- ADD INIATIVE HERE -->
+            <li>The University has about $277 million of their endowment invested in either natural gas or petroleum</li>
+            <li>We estimate that this amounts to emitting ~5.5 billion KG of CO2 per year, more than 16x what is emitted by USC’s campuses each year</li>
+            <li>Divesting from fossil fuels and reinvesting in renewables and green tech is a great way to help ease the transition to clean energy, and it will also make the University money as fossil fuel assets have been massively underperforming, and the green tech/renewables sector has been growing at an impressive rate</li>
+          </ul></div>
           Engagement in Sustainability<br/>
           <div class="whiteboxed left"><ul>
             <!-- ADD INIATIVE HERE -->
